--- a/index.html
+++ b/index.html
@@ -64,15 +64,17 @@
         <button type="button" class="header__button btn">Buy now ></button>
       </div>
     </header>
-    <main class="page"></main>
-    <section class="section hero">
-      <div class="hero__container container"></div>
-      <h1 class="hero__title">
-        ice cream made with <span clas="hero__title--accent">passion</span>
-      </h1>
-      <button class="hero__btn-prodacrts" type="button">Products</button>
-      <button type="button__btn-">How it’s made?</button>
-    </section>
+    <main class="page">
+      <section class="hero">
+        <div class="container hero__container">
+          <h1 class="hero__title">
+            ice cream made with <span class="hero__title--accent">passion</span>
+          </h1>
+          <button class="hero__btn-prodacrts" type="button">Products</button>
+          <button type="button__btn-">How it’s made?</button>
+        </div>
+      </section>
+    </main>
     <footer class="footer"></footer>
     <script src="./js/modal.js"></script>
     <script src="./js/menu.js"></script>
